--- a/GameZone/Views/Game/Index.cshtml
+++ b/GameZone/Views/Game/Index.cshtml
@@ -2,6 +2,7 @@
 @model IEnumerable<Game>
 @{
     ViewData["Title"] = "Games";
+    var paginationInfo = ViewData["PaginationInfo"] as PaginationInfo;
 }
 
 <a class="btn btn-secondary btn-lg" asp-action="Create">
@@ -18,6 +19,18 @@
 }
 else
 {
+    <!-- Formulaire de recherche -->
+    <div class="mt-3 mb-3">
+        <form asp-action="Index" method="get" class="form-inline">
+            <div class="input-group">
+                <input type="text" class="form-control" name="searchTerm" placeholder="Search by Name or Category">
+                <div class="input-group-append">
+                    <button type="submit" class="btn btn-primary">Search</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
     <div class="mt-5">
         <table class="table table-bordered border-primary">
             <tbody>
@@ -49,8 +62,30 @@ else
                 }
             </tbody>
         </table>
+
+        <!-- Ajouter les liens de pagination -->
+        @if (paginationInfo != null && paginationInfo.TotalPages > 1)
+        {
+            <div class="mt-5">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        @for (int i = 1; i <= paginationInfo.TotalPages; i++)
+                        {
+                            <li class="page-item @(i == paginationInfo.PageNumber ? "active" : "")">
+                                <a class="page-link" asp-action="Index" asp-route-pageNumber="@i">@i</a>
+                            </li>
+                        }
+                    </ul>
+                </nav>
+            </div>
+        }
+
     </div>
+
+   
 }
+
+
 
 @section Scripts
 {
