--- a/GameZone/Views/Game/Index.cshtml
+++ b/GameZone/Views/Game/Index.cshtml
@@ -10,6 +10,14 @@
     Add Game
 </a>
 
+<!-- Bouton pour imprimer en Excel -->
+<div class="mt-3">
+    <form asp-action="ExportToExcel" method="post">
+        <input type="hidden" name="searchTerm" value="@ViewBag.SearchTerm" />
+        <button type="submit" class="btn btn-success">Export to Excel</button>
+    </form>
+</div>
+
 @if (!Model.Any())
 {
     <div class="alert alert-warning mt-5">
@@ -30,6 +38,18 @@ else
             </div>
         </form>
     </div>
+
+@*     <!-- Formulaire de recherche -->
+    <div class="mt-3 mb-3">
+        <form asp-action="Index" method="get" class="form-inline">
+            <div class="input-group">
+                <input type="text" class="form-control" name="searchTerm" placeholder="Search by Name or Category">
+                <div class="input-group-append">
+                    <button type="submit" class="btn btn-primary">Search</button>
+                </div>
+            </div>
+        </form>
+    </div> *@
 
     <div class="mt-5">
         <table class="table table-bordered border-primary">
